@@ -1,3 +1,8 @@
+2010-01-28  Frank Warmerdam  <warmerdam@pobox.com>
+
+	* shpopen.c: Improve the numerical accurancy of algorithms in
+	SHPRewind() (http://trac.osgeo.org/gdal/ticket/3363).
+
 2010-01-16  Frank Warmerdam  <warmerdam@pobox.com>
 
 	* shpopen.c: support passing in zero/nulls to create an empty
